# mmp

./: .gitignore  Cargo.toml  README.md  test.html
mmp-client/: Cargo.toml
mmp-lib/: Cargo.toml
mmp-lib/src/: lib.rs
mmp-lib/src/routes/: song.rs
mmp-server/: Cargo.toml
mmp-server/src/: cacher.rs  data.rs  main.rs  routes.rs  search.rs  songfile.rs  state.rs  tasks.rs
mmp-server/src/data/: dbinit.rs
mmp-server/src/routes/: song.rs  stream.rs  test.rs
mmp-server/src/tasks/: ffmpeg.rs  files.rs
