[package]
name = "mmp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.9"
tracing-tree = "0.3.0"
tracing-subscriber = { features = ["env-filter"], version = "0.3.9" }
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["rt", "macros", "rt-multi-thread"] }
clap = { version = "4.5.2", features = ["derive"] }
sqlx = { version = "0.7.4", features = [
  "macros",
  "runtime-tokio-rustls",
  "sqlite",
  "migrate",
] }
eyre = "0.6.12"
async-walkdir = "1.0.0"
futures-lite = "2.3.0"
parking_lot = "0.12.1"
mini-moka = "0.10.3"
mmp-lib = { path = "../mmp-lib/" }
lofty = "0.18.2"
rustc-hash = "1.1.0"
dashmap = "5.5.3"
